<resources>
    <string name="app_name">Best payment</string>
    <string name="textview">User name</string>
    <string name="editText">User name</string>
    <string name="btn">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">bottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image">image</string>
    <string name="change_background">ChangeBackground</string>
    <string name="checkbox">Checkbox</string>
    <string name="checktime">CheckTime</string>
    <string name="switchwifi">SwitchWifi</string>
    <string name="android">Android</string>
    <string name="sang">Sang</string>
    <string name="chieu">Chieu</string>
    <string name="ios">IOS</string>
    <string name="php">PHP</string>
    <string name="trua">Trua</string>
    <string name="dang_nhap_he_thong">Đăng nhập hệ thống</string>
    <string name="submit">Submit</string>
    <string name="user_name">User name</string>
    <string name="min_number">Min number</string>
    <string name="imageview">ImageView</string>
    <string name="login">Login</string>
    <string name="bottomnavigation">BottomNavigation</string>
    <string name="password">Password</string>
    <string name="randomnumber">RandomNumber</string>
    <string name="max_number">Max number</string>
    <string name="gen_number">Gen number</string>
    <string name="randomNumberTextView">TextView</string>
</resources>
